sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:5: error: not found: value getNombrevaleurs
  for (i<-0 to getNombrevaleurs()-1) {
               ^