sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var a=getValeur(0)
  
  for (i<-0 to getNombrevaleurs()-1) {
  
  	for (N<-i to getNombreValeurs()-2) {
    	if(!plusPetit(N,N+1)) {
      	a=N+1
    	}
  	}
  	echange(a,i)
  }
}